* Cleanup feature tests making them more consistent. [jddalton]

* Ensure getElementsByClassName(), getElementById(), getElementsByName(), and getElementsByTagName() exist on elements before calling them. [jddalton]

* Optimize prefiltering in client_api() avoding extra processing if `parts[1]` matches are undefined and allow filtering of selectors containing `:not` again. [jddalton]

* Refine `Optimize.tagName` to match more tagName selectors. [jddalton]

* Ensure native_api() returns an array of results for className selectors instead of nodeLists. [jddalton]

* Remove unnecessary grouping from `strSkipQuotes` and remove the `*` from the end of the `Optimize` regexps. [jddalton] 

* Avoid prefiltering in client_api() if the selector contains `:not` and move the `ID optimization LTR` block under the `ID optimization RTL` block. [jddalton]

* Move the client_api() `ID optimization RTL` block into the `reduce selection context` block to reduce tests if Optimize.id isn't matched in the selector. [jddalton]

* Ensure the element returned by gEBID actually has the id in the `reduce selection context` block of client_api(). [jddalton]

* Avoid name.toUpperCase() in getChildIndexesByTag() if possible. [jddalton]

* Remove toLowerCase() call in getAttribute(). [jddalton]

* Cleanup `switch` statements, reduce variable assignments in native_api(), and remove unused parts of ID/TAG optimizations in client_api(). [jddalton]

* Avoid unnecessarily converting the output of byClass() to an array. [jddalton]

* Remove the unused `view` variable and assign `lastContext` a default value of `context`. [jddalton]

* Add the native_api() method to handle simple selectors. [Diego Perini, jddalton]

* Remove the `r` argument from the compiled selectors and make match() support a callback argument. [jddalton]

* Make getChildIndexes() and getChildIndexesByTag() use do-while loops. [jddalton]
